--- a/.env
+++ b/.env
@@ -1,68 +1,19 @@
 # .env
 # 請將此檔案設為私密，不要上傳到 GitHub
 
-# n8n base URL（Render 會自動設定）
-WEBHOOK_TUNNEL_URL=
+# Webhook URL（部署後會更新）
+WEBHOOK_URL=https://your-n8n-domain.onrender.com/
 
-# 認證（如有需要登入 n8n 頁面）
+# 
 N8N_BASIC_AUTH_ACTIVE=true
 N8N_BASIC_AUTH_USER=yourUsername
 N8N_BASIC_AUTH_PASSWORD=yourPassword
-
-# 資料儲存目錄（Render 上自動掛載 volume）
 N8N_HOST=0.0.0.0
 N8N_PORT=5678
 
-# 加密金鑰（第一次部署會自動產生即可）
 # N8N_ENCRYPTION_KEY=randomlongstring1234567890
 
-# Postgres 設定（Render 上會自動幫你建立）
-DB_TYPE=postgresdb
-DB_POSTGRESDB_HOST=postgres
-DB_POSTGRESDB_PORT=5432
-DB_POSTGRESDB_DATABASE=n8n
-DB_POSTGRESDB_USER=n8n
-DB_POSTGRESDB_PASSWORD=password
-
-# Redis（如需佇列）
-# QUEUE_MODE=redis
-# REDIS_HOST=redis
-# REDIS_PORT=6379
-
----
-
-# docker-compose.yml
-version: "3.1"
-services:
-  n8n:
-    image: n8n:latest
-    restart: always
-    ports:
-      - "5678:5678"
-    environment:
-      - DB_TYPE=postgresdb
-      - DB_POSTGRESDB_HOST=postgres
-      - DB_POSTGRESDB_PORT=5432
-      - DB_POSTGRESDB_DATABASE=n8n
-      - DB_POSTGRESDB_USER=n8n
-      - DB_POSTGRESDB_PASSWORD=password
-      - N8N_BASIC_AUTH_ACTIVE=true
-      - N8N_BASIC_AUTH_USER=yourUsername
-      - N8N_BASIC_AUTH_PASSWORD=yourPassword
-      - N8N_HOST=0.0.0.0
-      - N8N_PORT=5678
-    volumes:
-      - ./n8n_data:/home/node/.n8n
-
-  postgres:
-    image: postgres:13
-    restart: always
-    environment:
-      POSTGRES_USER: n8n
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: n8n
-    volumes:
-      - ./postgres_data:/var/lib/postgresql/data
-
-
----
+# PostgreSQL 資訊
+POSTGRES_USER=n8n
+POSTGRES_PASSWORD=n8npass
+POSTGRES_DB=n8n
