--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # 請將此檔案設為私密，不要上傳到 GitHub
 
 # Webhook URL（部署後會更新）
-WEBHOOK_URL=https://your-n8n-domain.onrender.com/
+WEBHOOK_URL=https://n8n-main-ow9c.onrender.com
 
 # 
 N8N_BASIC_AUTH_ACTIVE=true
