--- a/.env
+++ b/.env
@@ -14,6 +14,6 @@ N8N_PORT=5678
 # N8N_ENCRYPTION_KEY=randomlongstring1234567890
 
 # PostgreSQL 資訊
-POSTGRES_USER=n8n
-POSTGRES_PASSWORD=n8npass
-POSTGRES_DB=n8n
+POSTGRES_USER=n8n_rjta_user
+POSTGRES_PASSWORD=8AhHiOiSJV6OrkoikTdS34bgjrbU9u7Y
+POSTGRES_DB=n8n_rjta
