--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ N8N_BASIC_AUTH_PASSWORD=yourPassword
 N8N_HOST=0.0.0.0
 N8N_PORT=5678
 
-# N8N_ENCRYPTION_KEY=randomlongstring1234567890
+# 
+N8N_ENCRYPTION_KEY=randomlongstring1234567890
 
 # PostgreSQL 資訊
 POSTGRES_USER=n8n_rjta_user
