--- a/.env
+++ b/.env
@@ -18,3 +18,13 @@ N8N_ENCRYPTION_KEY=randomlongstring1234567890
 POSTGRES_USER=n8n_rjta_user
 POSTGRES_PASSWORD=8AhHiOiSJV6OrkoikTdS34bgjrbU9u7Y
 POSTGRES_DB=n8n_rjta
+
+# 這個是 queue 模式必要
+N8N_EXECUTIONS_MODE=queue
+QUEUE_MODE=redis
+
+# main / worker 互相認證的密碼，main 和 worker 要一致
+N8N_TASKS_BROKER_AUTH_PASSWORD=ttqsttqs2024
+
+# 讓 render 可以連接 redis
+REDIS_HOST=redis
